#148 - fixed some alignment issues for row items in Advancements tab

--- a/styles/init.sass
+++ b/styles/init.sass
@@ -84,7 +84,7 @@
   // alter heading styles for Configure Settings
   #client-settings
   h4
-    font-size: 1.1em
+    font-size: 1em
     border-bottom: 1px solid var(--color-underline-header)
 
   .gas-add-dt-folders
